new file:   css/htmleaf-demo.css 	new file:   css/normalize.css 	new file:   css/style.css 	new file:   fonts/icomoon.eot 	new file:   fonts/icomoon.svg 	new file:   fonts/icomoon.ttf 	new file:   fonts/icomoon.woff 	modified:   index.html 	new file:   js/clock-canvas.min.js 	new file:   js/jquery-1.11.3.min.js 	new file:   js/jquery-1.8.3.min.js 	new file:   js/jquery-1.9.1.min.js 	new file:   js/jquery-2.1.4.min.js 	new file:   js/jquery-3.1.1.min.js 	new file:   js/stopExecutionOnTimeout.js 	new file:   redister.php 	modified:   show.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link href="./Flat-UI/docs/assets/css/demo.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="./Flat-UI/img/favicon.ico">
-	<script type="text/javascript"></script>
 </head>
-<body>
+<body background="image/index.png">
+	<canvas id = "clock" width = "500px" height = "200px" style="color: blue">
+            您的浏览器太古董了，升级吧！
+    </canvas>
+    <script type='text/javascript'src="js/clock-canvas.min.js"></script>
 	<br>
 	<br>
 	<br>
@@ -33,6 +36,16 @@
 	<br>
 	<center><a href="show.html"><button class="btn btn-hg btn-primary">
   	点我进入店铺
-   	</button></a></center>
+   	</button></a>
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+   	<a href=""><button class="btn btn-hg btn-primary">注册成为会员</button></a></center>
 </body>
 </html>
