--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>韩流小店</title>
-	<link href="./Flat-UI/dist/css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//cdn.bootcss.com/flat-ui/2.3.0/css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Loading Flat UI -->
-    <link href="./Flat-UI/docs/assets/css/demo.css" rel="stylesheet">
-
+    <link href="//cdn.bootcss.com/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/flat-ui/2.3.0/css/flat-ui.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="./Flat-UI/img/favicon.ico">
+    <style type="text/css">
+	.container{
+      margin:0 auto;
+      width:800px;
+    }
+    </style>
 </head>
 <body background="image/index.png">
-	<canvas id = "clock" width = "500px" height = "200px" style="color: blue">
+	<div class="container"><canvas id = "clock" width = "500px" height = "200px" >
             您的浏览器太古董了，升级吧！
-    </canvas>
+    </canvas></div>
     <script type='text/javascript'src="js/clock-canvas.min.js"></script>
-	<br>
-	<br>
-	<br>
-	<br>
 	<br>
 	<br>
 	<br>
