--- a/show.html
+++ b/show.html
@@ -17,7 +17,7 @@
 	<header class="htmleaf-header">
 			<h1>特色商品<span>The relentless pursuit of perfection</span></h1>
 			<div class="htmleaf-links">
-				<a class="htmleaf-icon icon-htmleaf-home-outline" href="index.html" title="店铺首页" target="_blank"><span> 店铺首页</span></a>
+				<a class="htmleaf-icon icon-htmleaf-home-outline" href="index.html" title="店铺首页" target="_self"><span> 店铺首页</span></a>
 				<a class="htmleaf-icon icon-htmleaf-arrow-forward-outline" href="sell.php" title="进入订购通道" target="_blank"><span> 进入订购通道</span></a>
       </div>
       <div><h1>TOP 5</h1></div>
