--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 	&nbsp;
 	&nbsp;
 	&nbsp;
-   	<a href=""><button class="btn btn-hg btn-primary">注册成为会员</button></a></center>
+   	<a href="redister.php"><button class="btn btn-hg btn-primary">注册成为会员</button></a></center>
 </body>
 </html>
