原谅我坑爹的审美（尝试美化）

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html >
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>韩流小店</title>
 	<link href="//cdn.bootcss.com/flat-ui/2.3.0/css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Loading Flat UI -->
+	<link href="./css/style2.css" type="text/css" rel="stylesheet">
+     <!--Loading Flat UI--> 
     <link href="//cdn.bootcss.com/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/flat-ui/2.3.0/css/flat-ui.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="./Flat-UI/img/favicon.ico">
@@ -15,12 +17,24 @@
       width:800px;
     }
     </style>
+   
 </head>
-<body background="image/index.png">
+<body background="./image/index.png">
 	<div class="container"><canvas id = "clock" width = "500px" height = "200px" >
             您的浏览器太古董了，升级吧！
     </canvas></div>
     <script type='text/javascript'src="js/clock-canvas.min.js"></script>
+    <div class="contain">
+	<img src="./image/mm1.jpg" class="pic1"  />
+	<img src="./image/mm2.jpg" class="pic2"  />
+	<img src="./image/mm3.jpg" class="pic3"  />
+	<img src="./image/mm4.jpg" class="pic4"  />
+	<img src="./image/mm5.jpg" class="pic5"  />
+	<img src="./image/mm6.jpg" class="pic6"  />
+	<img src="./image/mm7.jpg" class="pic7"  />
+	<img src="./image/mm8.jpg" class="pic8"  />
+	<img src="./image/mm9.jpg" class="pic9"  />
+	<img src="./image/mm10.jpg" class="pic10"  />
 	<br>
 	<br>
 	<br>
@@ -36,7 +50,15 @@
 	<br>
 	<br>
 	<br>
-	<center><a href="show.html"><button class="btn btn-hg btn-primary">
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<div><center><a href="show.html"><button class="btn btn-hg btn-primary">
   	点我进入店铺
    	</button></a>
 	&nbsp;
@@ -49,5 +71,6 @@
 	&nbsp;
 	&nbsp;
    	<a href="redister.php"><button class="btn btn-hg btn-primary">注册成为会员</button></a></center>
+   	</div>
 </body>
 </html>
